Menambahkan CSS dan membuat halaman yang responsif

--- a/profil_biodata.html
+++ b/profil_biodata.html
@@ -5,48 +5,88 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Profil Biodata Saya</title>
   <style>
-    :root{ --accent:#222; --muted:#eee; --card:#f3f3f3 }
+    :root{ --accent:#0096fd; --muted:#eef2ff; --card:#ffffff }
     *{box-sizing:border-box}
-    body{font-family:Arial, Helvetica, sans-serif; margin:0; color:#111}
+    body{font-family:Arial, Helvetica, sans-serif; margin:0; color:#111; background:#f5f7ff}
+
     /* NAV */
-    header.site-header{border-bottom:3px solid #111; padding:8px 18px; display:flex; align-items:center; justify-content:space-between}
-    .brand{font-weight:700}
-    nav.top-nav a{margin-left:18px; text-decoration:none; color:#222}
+    header.site-header{background:#0096fd; color:white; padding:14px 22px; display:flex; align-items:center; justify-content:space-between; flex-wrap:wrap}
+    .brand{font-weight:700; font-size:20px}
+    nav.top-nav{display:flex; gap:18px; flex-wrap:wrap; margin-top:8px}
+    nav.top-nav a{text-decoration:none; color:white; font-weight:600}
 
-    /* HERO with two columns */
-    .hero{display:flex; gap:20px; padding:28px 24px; align-items:center}
-    .hero .left{flex:1}
-    .hero h1{margin:0 0 8px; font-size:28px}
-    .hero p{margin:0 0 12px; color:#444}
-    .cta{display:inline-block; padding:8px 12px; border:1px solid #555; background:transparent; cursor:pointer}
-    .hero .right{width:48%; max-width:620px}
-    .placeholder{background:#ddd; height:320px; display:flex; align-items:center; justify-content:center; color:#999; font-size:36px; border:6px solid #eee}
+    /* HERO */
+    .hero{display:grid; grid-template-columns:1fr 1fr; gap:24px; padding:40px 32px; align-items:center; max-width:1200px; margin:auto}
+    .hero h1{margin:0 0 12px; font-size:36px; color:#0096fd}
+    .hero p{margin:0 0 20px; color:#444; font-size:16px}
+    .cta{display:inline-block; padding:12px 18px; background:#0096fd; color:white; border-radius:6px; cursor:pointer; font-weight:600}
+    .hero .right{text-align:right}
+    .hero .right img{width:80%; max-width:380px; border-radius:12px; object-fit:cover; border:4px solid #dbe1ff}
 
-    /* About section */
-    section.about{border-top:3px solid #111; border-bottom:3px solid #111; padding:28px 24px; text-align:center}
-    section.about h2{margin:0 0 6px}
-    section.about p.lead{margin:0 0 18px; color:#666}
-    /* Use table for biodata (requirement) */
-    .biodata-table{width:100%; max-width:1100px; margin:0 auto; border-collapse:collapse}
-    .biodata-table td{padding:14px; border:1px solid #ddd; background:var(--card); text-align:center}
+    /* ABOUT */
+    section.about{text-align:center; padding:40px 20px; background:white; border-top:4px solid #0096fd; border-bottom:4px solid #0096fd}
+    section.about h2{margin:0 0 10px; color:#0096fd; font-size:28px}
+    section.about p.lead{margin:0 0 24px; color:#555; font-size:16px}
 
-    /* Portfolio */
-    section.portfolio{padding:28px 24px}
-    section.portfolio h2{ text-align:center; margin-bottom:18px}
-    .projects{display:flex; gap:18px; max-width:1100px; margin:0 auto; justify-content:space-between}
-    .project{flex:1; border:1px solid #aaa; padding:12px; background:#fafafa; text-align:center}
-    .project .img{height:160px; background:#ddd; display:flex; align-items:center; justify-content:center; color:#999}
-    .project h3{margin:12px 0 6px}
-    .project p{margin:0;color:#444}
+    .biodata-grid{
+      display:grid;
+      grid-template-columns:repeat(auto-fit, minmax(220px,1fr));
+      gap:18px;
+      max-width:1100px;
+      margin:0 auto;
+      padding:0 12px;
+    }
+    .biodata-box{
+      padding:18px;
+      background:white;
+      border-radius:12px;
+      border:2px solid #dbe1ff;
+      text-align:center;
+      box-shadow:0 2px 6px rgba(0,0,0,0.05);
+      font-size:15px;
+    }
+    .biodata-box strong{color:#0096fd; display:block; margin-top:6px}
 
-    /* Footer small */
-    footer{padding:12px 18px; text-align:center; color:#666}
+    /* PORTFOLIO */
+    section.portfolio{padding:40px 20px}
+    section.portfolio h2{text-align:center; margin-bottom:20px; color:#0096fd; font-size:28px}
+    .projects{
+      display:grid;
+      grid-template-columns:repeat(auto-fit, minmax(260px,1fr));
+      gap:20px;
+      max-width:1100px;
+      margin:auto;
+      padding:0 12px;
+    }
+    .project{
+      background:white;
+      border-radius:12px;
+      padding:16px;
+      border:2px solid #dbe1ff;
+      text-align:center;
+      box-shadow:0 2px 6px rgba(0,0,0,0.05);
+    }
+    .project img{width:100%; height:180px; object-fit:cover; border-radius:8px}
+    .project h3{margin:12px 0 6px; color:#0096fd; font-size:18px}
+    .project p{margin:0; color:#444}
 
-    /* Responsive */
+    /* FOOTER */
+    footer{padding:18px; text-align:center; color:#333; background:#eef2ff; font-size:15px}
+
+    /* RESPONSIVE */
     @media(max-width:900px){
-      .hero{flex-direction:column}
-      .hero .right{width:100%}
-      .projects{flex-direction:column}
+      .hero{grid-template-columns:1fr; text-align:center}
+      .hero .right{text-align:center}
+      .hero .right img{width:70%; margin:auto}
+      .hero h1{font-size:30px}
+    }
+
+    @media(max-width:600px){
+      header.site-header{flex-direction:column; text-align:center}
+      nav.top-nav{justify-content:center}
+      .hero h1{font-size:26px}
+      .hero p{font-size:14px}
+      .cta{padding:10px 16px}
     }
   </style>
 </head>
@@ -63,13 +103,11 @@
   <section class="hero" id="header">
     <div class="left">
       <h1>Selamat Datang di Website Saya</h1>
-      <p>Ini adalah contoh header dengan dua kolom. Kolom kiri berisi teks seperti ini. Tambahkan ringkasan singkat tentang diri Anda di sini.</p>
+      <p>Ini adalah contoh header dengan dua kolom yang sudah dibuat menggunakan grid layout, lebih berwarna, dan responsif.</p>
       <button class="cta">Pelajari Lebih Lanjut</button>
     </div>
     <div class="right">
-      <div class="placeholder">
-        <img src="/img/fotoprofile.jpeg" alt="Foto Profil" width="600" height="320">
-      </div>
+      <img src="/img/fotoprofile.jpeg" alt="Foto Profil" />
     </div>
   </section>
 
@@ -77,44 +115,34 @@
     <h2>About Me</h2>
     <p class="lead">A brief introduction about myself</p>
 
-    <!-- Biodata menggunakan tabel (6 box) -->
-    <table class="biodata-table" role="table">
-      <tr>
-        <td>Full Name<br><strong>Muhamad Fadhillah Dinurahman</strong></td>
-        <td>Education<br><strong>S1 - Informatika</strong></td>
-        <td>Pekerjaan<br><strong>Mahasiswa</strong></td>
-      </tr>
-      <tr>
-        <td>Contact<br><strong>0853-5366-3307</strong></td>
-        <td>Hobi<br><strong>Programming, Sport</strong></td>
-        <td>Alamat<br><strong>Sukabumi, Jawa Barat</strong></td>
-      </tr>
-    </table>
+    <div class="biodata-grid">
+      <div class="biodata-box">Full Name<br><strong>Muhamad Fadhillah Dinurahman</strong></div>
+      <div class="biodata-box">Education<br><strong>S1 Informatika</strong></div>
+      <div class="biodata-box">Pekerjaan<br><strong>Mahasiswa</strong></div>
+      <div class="biodata-box">Contact<br><strong>0853-5366-3307</strong></div>
+      <div class="biodata-box">Hobi<br><strong>Programming, Sport</strong></div>
+      <div class="biodata-box">Alamat<br><strong>Sukabumi, Jawa Barat</strong></div>
+    </div>
   </section>
 
   <section class="portfolio" id="portfolio">
     <h2>Portofolio</h2>
     <div class="projects">
+
       <div class="project">
-        <div class="img">
-            <img src="/img/Loginproject.png" alt="Halaman Login Proyek" width="350" height="150">
-        </div>
+        <img src="/img/Loginproject.png" alt="Halaman Login Proyek" />
         <h3>Proyek 1</h3>
         <p>Halaman Login</p>
       </div>
 
       <div class="project">
-        <div class="img">
-            <img src="/img/Project1.png" alt="Halaman Utama Proyek" width="350" height="150">
-        </div>
+        <img src="/img/Project1.png" alt="Halaman Utama Proyek" />
         <h3>Proyek 2</h3>
         <p>Halaman Dashboard</p>
       </div>
 
       <div class="project">
-        <div class="img">
-            <img src="/img/projectabsenjnt.png" alt="Absensi Proyek" width="350" height="150">
-        </div>
+        <img src="/img/projectabsenjnt.png" alt="Absensi Proyek" />
         <h3>Proyek 3</h3>
         <p>Absensi Karyawan</p>
       </div>
