--- a/sesi_4/index.html
+++ b/sesi_4/index.html
@@ -15,7 +15,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" rel="stylesheet">
     
     <!-- External CSS -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
 
@@ -110,9 +110,13 @@
         <div class="row mb-5">
             <div class="col-lg-8 mx-auto mb-4">
                 <p class="text-center fs-5">
-                    I'm a passionate web developer dedicated to creating beautiful, functional, and user-centric web experiences. 
-                    With expertise in front-end and back-end development, I help businesses achieve their digital goals through 
-                    innovative and scalable solutions. Let me help you build something amazing!
+                    I am a Bachelor’s degree graduate with a strong interest in Web Development, particularly in developing web-based applications using Laravel and MySQL. I am accustomed to building CRUD systems, user authentication, and database integration for small to medium-scale applications.
+                </p>
+                <p class="text-center fs-5">
+                    Saya memiliki pengalaman mengembangkan beberapa project seperti sistem
+                    absensi berbasis web, website UMKM, dan aplikasi administrasi dengan fokus
+                    pada fungsionalitas, struktur kode yang rapi, dan kemudahan penggunaan.
+                    Saya siap belajar teknologi baru dan bekerja dalam tim maupun individu.
                 </p>
             </div>
         </div>
@@ -138,19 +142,22 @@
             <div class="col-md-4">
                 <div class="about-card">
                     <h5><i class="bi bi-telephone-fill"></i> Contact</h5>
-                    <p>+62 853-5366-3307</p>
+                    <p>WhatsApp : +62 853-5366-3307</p>
+                    <p>Instagram : @fadhillahdnr</p>
+                    <p>LinkedIn : <a href="https://www.linkedin.com/in/muhamad-fadhillah-dinurahman-s-kom-a50b441ab?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">Muhamad Fadhillah </a></p> 
+                    <p>GitHub : <a href="https://github.com/Fadhillahdnr">Fadhillahdnr</a></p>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="about-card">
-                    <h5><i class="bi bi-heart-fill"></i> Hobi</h5>
-                    <p>Coding, Gaming, Sport</p>
+                    <h5><i class="bi bi-heart-fill"></i> Skill</h5>
+                    <p>PHP (Laravel), MySQL & Database Design, HTML, CSS, JavaScript, Bootstrap, REST API (Basic), Authentication & Authorization, Git & GitHub</p>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="about-card">
                     <h5><i class="bi bi-geo-alt-fill"></i> Alamat</h5>
-                    <p>Sukabumi, Indonesia</p>
+                    <p>Komplek Gor Cisaat RT 03 RW 03 Desa Sukamanah Kecamatan Cisaat Kabupaten Sukabumi Provinsi Jawa Barat, Indonesia</p>
                 </div>
             </div>
         </div>
@@ -191,59 +198,55 @@
 <section id="projects" class="projects-section section-padding">
     <div class="container-lg">
         <h2 class="section-title">My Projects</h2>
-        
+
         <!-- Filter Buttons -->
-        <div class="filter-buttons">
+        <div class="filter-buttons text-center mb-4">
             <button class="filter-btn active" data-filter="all">All</button>
-            <button class="filter-btn" data-filter="ui-ux">UI/UX</button>
             <button class="filter-btn" data-filter="web-design">Web Design</button>
-            <button class="filter-btn" data-filter="app-design">App Design</button>
+            <button class="filter-btn" data-filter="ui-ux">UI/UX</button>
             <button class="filter-btn" data-filter="graphic-design">Graphic Design</button>
         </div>
 
         <!-- Projects Grid -->
         <div class="row" id="projectsGrid">
+
             <!-- Project 1 -->
             <div class="col-md-6 col-lg-4 project-item" data-category="web-design">
-                <div class="project-card" data-bs-toggle="modal" data-bs-target="#projectModal" 
-                     data-title="E-Commerce Platform" data-category="Web Design" 
-                     data-desc="A fully responsive e-commerce platform built with React and Node.js. Features include product filtering, shopping cart, and secure payment integration.">
-                    <img src="img/Loginproject.png" alt="Project" class="project-image">
+                <a href="projects/login-system.html" class="project-card text-decoration-none">
+                    <img src="img/Loginproject.png" class="project-image">
                     <div class="project-info">
-                        <div class="project-title">E-Commerce Platform</div>
-                        <span class="project-category">Web Design</span>
+                        <h5>Sistem Login</h5>
+                        <span>Web Development</span>
                     </div>
-                </div>
+                </a>
             </div>
 
             <!-- Project 2 -->
             <div class="col-md-6 col-lg-4 project-item" data-category="ui-ux">
-                <div class="project-card" data-bs-toggle="modal" data-bs-target="#projectModal" 
-                     data-title="Mobile App Interface" data-category="UI/UX" 
-                     data-desc="Modern mobile app interface design with intuitive navigation and beautiful user experience. Designed using Figma with attention to accessibility.">
-                    <img src="img/webumkm.jpeg" alt="Project" class="project-image">
+                <a href="projects/login-system.html" class="project-card text-decoration-none">
+                    <img src="img/Loginproject.png" class="project-image">
                     <div class="project-info">
-                        <div class="project-title">Mobile App Interface</div>
-                        <span class="project-category">UI/UX</span>
+                        <h5>Sistem Login</h5>
+                        <span>Web Development</span>
                     </div>
-                </div>
+                </a>
             </div>
 
             <!-- Project 3 -->
             <div class="col-md-6 col-lg-4 project-item" data-category="graphic-design">
-                <div class="project-card" data-bs-toggle="modal" data-bs-target="#projectModal" 
-                     data-title="Brand Identity" data-category="Graphic Design" 
-                     data-desc="Complete brand identity package including logo, color palette, typography, and brand guidelines for a tech startup.">
-                    <img src="img/projectabsenjnt.png" alt="Project" class="project-image">
+                <a href="projects/login-system.html" class="project-card text-decoration-none">
+                    <img src="img/Loginproject.png" class="project-image">
                     <div class="project-info">
-                        <div class="project-title">Brand Identity</div>
-                        <span class="project-category">Graphic Design</span>
+                        <h5>Sistem Login</h5>
+                        <span>Web Development</span>
                     </div>
-                </div>
+                </a>
             </div>
+
         </div>
     </div>
 </section>
+
 
 <!-- Testimonials Section -->
 <section id="testimonials" class="testimonials-section section-padding">
@@ -292,6 +295,38 @@
         </div>
     </div>
 </section>
+
+<!-- Project Modal -->
+<div class="modal fade" id="projectModal" tabindex="-1">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+        <div class="modal-content">
+
+            <div class="modal-header">
+                <h5 class="modal-title" id="modalTitle"></h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+
+            <div class="modal-body">
+                <img id="modalImage" class="img-fluid rounded mb-3" alt="Project Image">
+                <p><strong>Category:</strong> <span id="modalCategory"></span></p>
+                <p><strong>Tech Stack:</strong> <span id="modalTech"></span></p>
+                <p><strong>Role:</strong> <span id="modalRole"></span></p>
+                <p id="modalDescription"></p>
+            </div>
+
+            <div class="modal-footer">
+                <a id="modalGithub" href="#" target="_blank" class="btn btn-dark">
+                    <i class="bi bi-github"></i> GitHub
+                </a>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                    Close
+                </button>
+            </div>
+
+        </div>
+    </div>
+</div>
+
 
 <!-- Contact Section -->
 <section id="contact" class="contact-section section-padding">
@@ -385,7 +420,6 @@
 
 <!-- Bootstrap 5 JavaScript -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
 <!-- Custom JavaScript -->
 <script>
     // Project Filter Functionality
